<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/gallery_page_padding_horizontal"
        android:paddingEnd="@dimen/gallery_page_padding_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gallery_title_album"
            style="@style/GalleryPageTitleStyle"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:iconifiedByDefault="true"
            android:queryHint="@string/gallery_search_hint"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/content_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/gallery_page_padding_horizontal"
            android:clipToPadding="false"
            android:visibility="gone"/>

        <ProgressBar
            android:id="@+id/loading"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <LinearLayout
            android:id="@+id/empty_state"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/gallery_empty_state_padding"
            android:visibility="gone">

            <TextView
                android:id="@+id/empty_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery_permission_hint"
                style="@style/GalleryEmptyMessageStyle" />

            <Button
                android:id="@+id/request_permission_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gallery_empty_button_margin_top"
                android:minHeight="@dimen/gallery_empty_button_min_height"
                android:minWidth="@dimen/gallery_empty_button_min_width"
                android:text="@string/gallery_request_permission" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/bg_floating_bar"
        android:elevation="@dimen/floating_bar_elevation"
        android:paddingHorizontal="@dimen/floating_bar_padding_horizontal"
        android:paddingVertical="@dimen/floating_bar_padding_vertical"
        android:layout_marginBottom="@dimen/floating_bar_margin_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/btn_tab_gallery"
            android:layout_width="@dimen/floating_bar_icon_size"
            android:layout_height="@dimen/floating_bar_icon_size"
            android:src="@drawable/ic_gallery"
            app:tint="@color/icon_tint_selected"
            android:contentDescription="@string/gallery_title_album"
            android:layout_marginEnd="@dimen/floating_bar_icon_spacing"/>

        <ImageView
            android:id="@+id/btn_tab_smart"
            android:layout_width="@dimen/floating_bar_icon_size"
            android:layout_height="@dimen/floating_bar_icon_size"
            android:src="@drawable/ic_smart_category"
            app:tint="@color/icon_tint_unselected"
            android:contentDescription="@string/gallery_tab_categories"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
