...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/photo_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageButton
        android:id="@+id/btn_bg_replace"
        android:layout_width="@dimen/btn_delete_size"
...
        android:contentDescription="@string/action_replace_background"
        android:src="@drawable/ic_bg_replace"
        android:scaleType="fitCenter"
        app:tint="@color/icon_on_dark" />

    <ImageButton
        android:id="@+id/btn_delete"
        android:layout_width="@dimen/btn_delete_size"
        android:layout_height="@dimen/btn_delete_size"
        android:layout_gravity="top|end"
        android:layout_marginTop="@dimen/btn_delete_margin_top"
        android:layout_marginEnd="@dimen/btn_delete_margin_end"
        android:padding="@dimen/btn_delete_padding"
...
