<?xml version="1.0" encoding="utf-8"?>
<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/gallery_page_padding_horizontal"
    android:clipToPadding="false" />